--- a/src/css/icon-font.css
+++ b/src/css/icon-font.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?nzbb8r');
-  src:  url('fonts/icomoon.eot?nzbb8r#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?nzbb8r') format('truetype'),
-    url('fonts/icomoon.woff?nzbb8r') format('woff'),
-    url('fonts/icomoon.svg?nzbb8r#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?k3io5h');
+  src:  url('fonts/icomoon.eot?k3io5h#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?k3io5h') format('truetype'),
+    url('fonts/icomoon.woff?k3io5h') format('woff'),
+    url('fonts/icomoon.svg?k3io5h#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-right-arrow:before {
+  content: "\e909";
+}
+.icon-left-arrow:before {
+  content: "\e90a";
+}
 .icon-shoe:before {
   content: "\e900";
 }
