--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -11,4 +11,5 @@
 @import "base/mixins";
 @import "blocks/header";
 @import "blocks/selection";
+@import "blocks/advantages";
 @import "blocks/buttons";
