--- a/src/css/icon-font.css
+++ b/src/css/icon-font.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('../fonts/icomoon.eot?k3io5h');
-  src:  url('../fonts/icomoon.eot?k3io5h#iefix') format('embedded-opentype'),
-    url('../fonts/icomoon.ttf?k3io5h') format('truetype'),
-    url('../fonts/icomoon.woff?k3io5h') format('woff'),
-    url('../fonts/icomoon.svg?k3io5h#icomoon') format('svg');
+  src:  url('../fonts/icomoon.eot?7f3v9o');
+  src:  url('../fonts/icomoon.eot?7f3v9o#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf?7f3v9o') format('truetype'),
+    url('../fonts/icomoon.woff?7f3v9o') format('woff'),
+    url('../fonts/icomoon.svg?7f3v9o#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -31,11 +31,11 @@
 .icon-left-arrow:before {
   content: "\e90a";
 }
-.icon-shoe:before {
-  content: "\e900";
-}
 .icon-cup:before {
   content: "\e901";
+}
+.icon-shoe:before {
+  content: "\e900";
 }
 .icon-heart-rate:before {
   content: "\e902";
