--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -34,5 +34,26 @@
         display: flex;
         flex-direction: column;
         align-items: flex-end;
+        width: 250px;
+    }
+}
+
+@media (max-width: 991px) {
+    .header {
+        &__logo {
+            width: 200px;
+        }
+        &__text {
+            font-size: 11px;
+            span {
+                font-size: 17px;
+            }
+        }
+        &__phone {
+            font-size: 17px;
+        }
+        &__contacts {
+            width: 200px;
+        }
     }
 }
