--- a/src/scss/blocks/_advantages.scss
+++ b/src/scss/blocks/_advantages.scss
@@ -52,10 +52,11 @@
             font-size: 25px;
         }
         &__wrapper {
-            justify-content: space-evenly;
+            justify-content: center;
         }
         &__item {
             width: 200px;
+            margin: 0 10px 0 10px;
         }
         &__icon {
             width: 50px;
@@ -63,10 +64,31 @@
             font-size: 50px;
         }
         &__description-title {
-            font-size: 15px;
+            font-size: 14px;
         }
         &__description-subtitle {
             font-size: 12px;
+        }
+    }
+}
+
+@media (max-width: 575px) {
+    .advantages {
+        padding: 60px 0 60px;
+        &__title {
+            font-size: 22px;
+        }
+        &__wrapper {
+            flex-direction: column;
+            align-items: center;
+            margin-top: 30px;
+        }
+        &__item {
+            margin-top: 30px;
+            width: 235px;
+        }
+        &__description-title {
+            margin-top: 10px;
         }
     }
 }
